--- a/packages/pdf/package.json
+++ b/packages/pdf/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@libprov/pdf",
-  "version": "2.0.9",
-  "description": "Pdf Component for Compensar component Library - React/Typescript",
+  "version": "1.0.3",
+  "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Hector Vinicio Lopez Molinares <hectorvmlopez@gmail.com>",
   "license": "ISC",
@@ -20,33 +20,29 @@
     "dist",
     "lib"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hectorlopezv/yarn-monorepo-first-approach.git"
+    "url": "git+https://github.com/compensar-globant-projectos/compensar_library.git"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
     "build": "rollup --config node_modules/@libprov/builder/lib/rollup.config.js"
   },
   "bugs": {
-    "url": "https://github.com/hectorlopezv/yarn-monorepo-first-approach/issues"
+    "url": "https://github.com/compensar-globant-projectos/compensar_library/issues"
   },
-  "homepage": "https://github.com/hectorlopezv/yarn-monorepo-first-approach#readme",
+  "homepage": "https://github.com/compensar-globant-projectos/compensar_library#readme",
   "devDependencies": {
-    "@libprov/builder": "^2.0.7",
+    "@libprov/builder": "^2.0.10",
     "@types/styled-components": "^5.1.11"
   },
   "peerDependencies": {
-    "@libprov/loader": "^2.0.3",
+    "@libprov/loader": "^1.0.0",
     "print-js": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.3.2",
     "seamless-scroll-polyfill": "^1.2.4",
     "styled-components": "^5.3.0"
-  },
-  "gitHead": "84382e86f1fdb149edb3688a9d23ce75111fcf1f"
+  }
 }
