--- a/packages/pdf/package.json
+++ b/packages/pdf/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@libprov/pdf",
-  "version": "3.0.0",
+  "name": "@artefactos/pdf",
+  "version": "3.0.1",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Hector Vinicio Lopez Molinares <hectorvmlopez@gmail.com>",
@@ -26,18 +26,18 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "build": "rollup --config node_modules/@libprov/builder/lib/rollup.config.js"
+    "build": "rollup --config node_modules/@artefactos/builder/lib/rollup.config.js"
   },
   "bugs": {
     "url": "https://github.com/compensar-globant-projectos/compensar_library/issues"
   },
   "homepage": "https://github.com/compensar-globant-projectos/compensar_library#readme",
   "devDependencies": {
-    "@libprov/builder": "^4.0.0",
+    "@artefactos/builder": "^4.0.1",
     "@types/styled-components": "^5.1.11"
   },
   "peerDependencies": {
-    "@libprov/loader": "^1.0.0",
+    "@artefactos/loader": "^1.0.0",
     "print-js": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
