--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@libprov/tooltip",
-  "version": "3.0.0",
+  "name": "@artefactos/tooltip",
+  "version": "3.0.1",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Hector Vinicio Lopez Molinares <hectorvmlopez@gmail.com>",
@@ -29,19 +29,20 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "build": "rollup --config node_modules/@libprov/builder/lib/rollup.config.js"
+    "build": "rollup --config node_modules/@artefactos/builder/lib/rollup.config.js"
   },
   "bugs": {
     "url": "https://github.com/compensar-globant-projectos/compensar_library/issues"
   },
   "homepage": "https://github.com/compensar-globant-projectos/compensar_library#readme",
   "peerDependencies": {
-    "@libprov/builder": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "0.32.4",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@artefactos/builder": "^4.0.1",
+    "@types/react": "^17.0.15",
     "@types/styled-components": "^5.1.11"
   }
 }
