--- a/packages/pdf/package.json
+++ b/packages/pdf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@artefactos/pdf",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "Hector Vinicio Lopez Molinares <hectorvmlopez@gmail.com>",
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/compensar-globant-projectos/compensar_library#readme",
   "devDependencies": {
-    "@artefactos/builder": "^4.0.6",
+    "@artefactos/builder": "^4.0.7",
     "@types/styled-components": "^5.1.11"
   },
   "peerDependencies": {
@@ -44,5 +44,6 @@
     "react-pdf": "^5.3.2",
     "seamless-scroll-polyfill": "^1.2.4",
     "styled-components": "^5.3.0"
-  }
+  },
+  "gitHead": "cf232cf69a9107fe2723e53c546fd8dd78182801"
 }
